Changed colors to fit a blue/purple color scheme

--- a/config
+++ b/config
@@ -4,11 +4,11 @@ max-items 500
 browser "elinks %u"
 
 color background          white     default
-color listnormal          color245  default  
-color listfocus           yellow    default  bold
+color listnormal          color103  default  
+color listfocus           color105  default  bold
 color listnormal_unread   white     default
-color listfocus_unread    yellow    default  bold
-color info                yellow    default  bold
+color listfocus_unread    color105  default  bold
+color info                color63   default  bold
 color article             white     default
 
 # unbind keys
@@ -26,19 +26,19 @@ bind-key h quit
 feedlist-format "%?l? %10u %t %4S & %t ?"
 articlelist-format "%D %t"
 
-highlight feedlist "\\[News\\]"             color160   default  bold
-highlight feedlist "\\[Music\\]"            color160   default  bold
-highlight feedlist "\\[Tech\\]"             color160   default  bold
-highlight feedlist "\\[Gaming\\]"           color160   default  bold
-highlight feedlist "\\[History & Arts\\]"   color160   default  bold
-highlight feedlist "\\[Science\\]"          color160   default  bold
-highlight feedlist "\\[Cooking\\]"          color160   default  bold
-highlight feedlist "\\[Fun\\]"              color160   default  bold
-highlight feedlist "\\[Misc\\]"             color160   default  bold
-highlight feedlist "\\[Podcasts\\]"         color160   default  bold
-highlight feedlist "\\[GitHub\\]"           color160   default  bold
-highlight feedlist "\\[Torrents\\]"         color160   default  bold
-highlight feedlist "\\[Updates\\]"          color160   default  bold
+highlight feedlist "\\[News\\]"             color135   default  bold
+highlight feedlist "\\[Music\\]"            color135  default  bold
+highlight feedlist "\\[Tech\\]"             color135  default  bold
+highlight feedlist "\\[Gaming\\]"           color135   default  bold
+highlight feedlist "\\[History & Arts\\]"   color135   default  bold
+highlight feedlist "\\[Science\\]"          color135   default  bold
+highlight feedlist "\\[Cooking\\]"          color135   default  bold
+highlight feedlist "\\[Fun\\]"              color135   default  bold
+highlight feedlist "\\[Misc\\]"             color135   default  bold
+highlight feedlist "\\[Podcasts\\]"         color135   default  bold
+highlight feedlist "\\[GitHub\\]"           color135   default  bold
+highlight feedlist "\\[Torrents\\]"         color135   default  bold
+highlight feedlist "\\[Updates\\]"          color135   default  bold
 
 macro p set browser "qutebrowser %u" ; open-in-browser-and-mark-read ; set browser "elinks %u"
 macro y set browser "mpv %u" ; open-in-browser-and-mark-read ; set browser "elinks %u"
