--- a/config
+++ b/config
@@ -1,5 +1,6 @@
 auto-reload yes
 max-items 500
+ignore-mode "display"
 
 browser "elinks %u"
 
@@ -26,6 +27,12 @@ bind-key h quit
 feedlist-format "%?l? %10u %t %4S & %t ?"
 articlelist-format "%D %t"
 
+
+# ignore-articles filters
+ignore-article "https://github.com/CleverRaven/Cataclysm-DDA/releases.atom" "title =~ \"experimental\""
+ignore-article "https://www.youtube.com/feeds/videos.xml?channel_id=UCsXVk37bltHxD1rDPwtNM8Q" "title =~ \"#short\""
+
+
 highlight feedlist "\\[News\\]"             color135   default  bold
 highlight feedlist "\\[Music\\]"            color135  default  bold
 highlight feedlist "\\[Tech\\]"             color135  default  bold
@@ -40,6 +47,8 @@ highlight feedlist "\\[Podcasts\\]"         color135   default  bold
 highlight feedlist "\\[Torrents\\]"         color135   default  bold
 highlight feedlist "\\[Updates\\]"          color135   default  bold
 
+# Macros
+
 macro p set browser "qutebrowser %u" ; open-in-browser-and-mark-read ; set browser "elinks %u"
-macro y set browser "mpv %u" ; open-in-browser-and-mark-read ; set browser "elinks %u"
-macro t set browser "transmission-remote -a %u" ; open-in-browser-and-mark-read ; set browser "elinks %u"
+macro v set browser "setsid -f mpv --quiet %u >/dev/null 2>&1" ; open-in-browser-and-mark-read ; set browser "elinks %u"
+macro x set browser "transmission-remote -a %u" ; open-in-browser-and-mark-read ; set browser "elinks %u"
